# CCSDS-Command-Telemetry-Router

./: CMakeLists.txt  README.md  docker-compose.yml  test-system.py
include/ccsds/: crc16.hpp  lossy_channel.hpp  space_packet.hpp
python_api/: telemetry_ingestor.py
python_api/app/: main.py
src/: crc16.cpp  lossy_channel.cpp  space_packet.cpp  udp_receiver.cpp  udp_sender.cpp
tests/: test_space_packet.cpp
